edited css to fix gap

--- a/web/static/css/main.css
+++ b/web/static/css/main.css
@@ -79,7 +79,7 @@ body {
     font-weight: Normal;
     color: #FFFFFF;
     font-size: 28px;
-    top: 125px;
+    top: 20px;
     position: relative;
     text-align: left;
     left: 75px;
